target_os = "android"      # These lines need to be changed manually
target_cpu = "x64"
is_debug = false
v8_enable_i18n_support= false
v8_target_cpu = "x64"
is_component_build = false

use_custom_libcxx = false
v8_monolithic = true
v8_use_external_startup_data = false

symbol_level = 0
v8_android_log_stdout = true
v8_enable_pointer_compression = false
v8_enable_tests = false